--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,7 +15,11 @@
     width: calc(100% - 16rem);
     margin-left: 16rem;
 }
-
-.card {
+//
+.hero-app {
     padding: 3rem;
+}
+
+.middle-align {
+    vertical-align: middle;
 }
